--- a/style.css
+++ b/style.css
@@ -25,7 +25,16 @@ body {
     border: none;
     margin: 0.1em;
     font-size: 20px;
+    max-width: 700px;
     width: 90px;
     height: 60px;
     
+}
+
+.btn_signs {
+    background-color: #343434;
+}
+
+.btn_result {
+    background-color: #5C5C5C;
 }
